--- a/main.tex
+++ b/main.tex
@@ -34,11 +34,11 @@ There are many details still to be addressed, but the company has identified the
 \noindent
 \textbf{1. What development model would you choose for this project? Why?}\\
 
-The appropriate development model for this project is Agile. The client requires the project to go into production as soon as possible so that they do not lose market share to competitors. They are also an established company therefore they are able to afford the greater resources and expertise required for an Agile development plan.\\
+The appropriate development model for this project is Agile. The client requires the project to go into production as soon as possible so that they do not lose market share to competitors. They are also an established company therefore they can afford the greater resources and expertise required for an Agile development plan.\\
 The scenario briefing states that many details are still to be addressed and that various discounts, bonus offers, and the extent of systems reports required are not determined yet. This indicates that user and system requirements are bound to change over the course of development. Agile is the best development model of when there is a high possibility of continuous changes.\\
 The project also requires reporting for their internal business processes, this component of the project can be separated out as a module and developed after the e-commerce module has been implemented and put into production. This modular development cycle is ideal for Agile.
-Organizations utilizing agile development methods are going to use software equipped for fast advancement to get the full advantages of this technique. As organizations make the move to an advanced digital working environment that is exceptionally subject to speed, adaptability, expanded profitability, and coordinated techniques, agile looks ideal for this organization. \citep{Alexander2018} \\
-Selecting a waterfall development plan would not allow requirements to be modified very easily once the project is out of the requirements gathering stage. Similarly, it would also require the whole project to be completed before it is put into production. A V-development model will allow testing to commence sooner however it too does not have the flexibility for changing requirements and modular development that Agile enables. Another caveat in the Waterfall development model is that testing comes after the coding stage while Agile performs testing simultaneously alongside development. \\
+Organizations utilizing agile development methods will use software equipped for fast advancement to get the full advantages of this technique. As organizations make the move to an advanced digital working environment that is exceptionally subject to speed, adaptability, expanded profitability, and coordinated techniques, agile looks ideal for this organization. \citep{Alexander2018} \\
+Selecting a waterfall development plan would not allow requirements to be modified very easily once the project is out of the requirements gathering stage. Similarly, it would also require the whole project to be completed before it is put into production. A V-development model will allow testing to commence sooner. However, it too does not have the flexibility for changing requirements and modular development that Agile enables. Another caveat in the Waterfall development model is that testing comes after the coding stage while Agile performs testing simultaneously alongside development. \citep{Angelina2015} \\
 
 \pagebreak
 \noindent
@@ -59,7 +59,7 @@ Selecting a waterfall development plan would not allow requirements to be modifi
 
   \item System Testing: Loading testing the website for the e-commerce website.
   \begin{itemize}
-    \item	Test Basis: System Requirements Specification, specifies the maximum load the website’s servers were set up for.
+    \item	Test Basis: System Requirements Specification, specifies the maximum load the website’s servers can accomodate.
     \item	Test Object: The website as a whole.
   \end{itemize}
 
@@ -74,7 +74,7 @@ Selecting a waterfall development plan would not allow requirements to be modifi
 \noindent
 \textbf{3. Identify a specific functional test that is needed for the project and outline the 6 steps you will take for this test.}\\
 
-Interoperability Testing. It is a type of functional testing which checks the capability of the developed software to interact with other software components and systems. It can be carried out following the 6 steps as listed below:\\
+Interoperability Testing. It is a type of functional testing which checks the capability of the developed software to interact with other software components and systems. It can be carried out following the six steps as listed below:\\
 
 \begin{enumerate}
   \item	Functionality: Creating test cases for all the possible paths through the E-commerce website to see how it will perform.
@@ -82,7 +82,7 @@ Interoperability Testing. It is a type of functional testing which checks the ca
   \item	Determine expected data: Using the previous example, the expected behavior is that when the product/item added to the shopping cart, the shopping cart is updated, and it is ready for check out.
   \item	Test execution: Execute the necessary tests to generate the results you will need for the next step.
   \item	Compare actual and expected results: Analyse the test results to see if there were any test cases where the actual results did not match the expected result.
-  \item	Raise defect case if step 5 fails: If the 5th step fails, a report is made, and the software development team performs debugging to correct the error in the code. 
+  \item	Raise defect case if step 5 fails: If the 5th step fails, a report is made, and the software development team performs debugging to correct the error in the code.
 \end{enumerate}
 
 \pagebreak
