--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,11 @@
+@book{Angelina2015,
+  author         = {Angelina Samaroo, Geoff Thompson},
+  editor         = {Brian Hambling},
+  title          = {Software Testing - An ISTQB-BCS Certified Tester Foundation Guide 3rd ed-BCS Learning \& Development Limited},
+  publisher      = {BCS},
+  year           = {2015}
+},
+
 @misc{Alexander2018,
   author       = {Moira Alexander},
   title        = {Agile project managementL 12 key principles, 4 big hurdles},
